--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
 	"require": {
 		"composer/installers": "~1.0",
 		"mwstake/mediawiki-component-processmanager": "1.0.*"
+	},
+	"autoload": {
+		"psr-4": {
+			"TuleapIntegration\\": "src/"
+		}
 	}
 }
