--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
 		"installer-name": "TuleapIntegration"
 	},
 	"require": {
-		"composer/installers": "~1.0",
-		"mwstake/mediawiki-component-processmanager": "1.0.*"
+		"composer/installers": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
