--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,26 @@
 		"composer/installers": "~1.0",
 		"mwstake/mediawiki-component-processmanager": "~1.0"
 	},
+	"require-dev": {
+		"jakub-onderka/php-parallel-lint": "1.0.0",
+		"jakub-onderka/php-console-highlighter": "0.4.0",
+		"mediawiki/mediawiki-codesniffer": "29.0.0",
+		"mediawiki/minus-x": "1.0.0"
+	},
 	"autoload": {
 		"psr-4": {
 			"TuleapIntegration\\": "src/"
 		}
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor --exclude node_modules",
+			"minus-x check .",
+			"phpcs -sp"
+		],
+		"fix": [
+			"minus-x fix .",
+			"phpcbf"
+		]
 	}
 }
