--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "0.4.0",
 		"mediawiki/mediawiki-codesniffer": "29.0.0",
-		"mediawiki/minus-x": "1.0.0"
+		"mediawiki/minus-x": "1.0.0",
+		"league/oauth2-client": "2.6.*"
 	},
 	"autoload": {
 		"psr-4": {
