--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
 		"installer-name": "TuleapIntegration"
 	},
 	"require": {
-		"composer/installers": "~1.0"
+		"composer/installers": "~1.0",
+		"league/oauth2-client": "2.6.*"
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "1.0.0",
 		"jakub-onderka/php-console-highlighter": "0.4.0",
 		"mediawiki/mediawiki-codesniffer": "29.0.0",
-		"mediawiki/minus-x": "1.0.0",
-		"league/oauth2-client": "2.6.*"
+		"mediawiki/minus-x": "1.0.0"
 	},
 	"autoload": {
 		"psr-4": {
