--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
 	},
 	"require": {
 		"composer/installers": "~1.0",
-		"league/oauth2-client": "2.6.*"
+		"league/oauth2-client": "2.6.*",
+		"firebase/php-jwt": "v6.0.*",
+		"phpseclib/phpseclib": "~3.0",
+		"ext-sodium": "*"
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "1.0.0",
