--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"league/oauth2-client": "2.6.*",
 		"firebase/php-jwt": "v6.0.*",
 		"phpseclib/phpseclib": "~3.0",
-		"ext-sodium": "*"
+		"ext-sodium": "*",
+		"symfony/process": "~5"
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "1.0.0",
