--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
 		"symfony/process": "~5"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "41.0.0",
-		"mediawiki/minus-x": "1.1.1",
-		"php-parallel-lint/php-console-highlighter": "1.0.0",
-		"php-parallel-lint/php-parallel-lint": "1.3.2"
+			"mediawiki/mediawiki-codesniffer": "41.0.0",
+			"mediawiki/mediawiki-phan-config": "0.12.1",
+			"mediawiki/minus-x": "1.1.1",
+			"php-parallel-lint/php-console-highlighter": "1.0.0",
+			"php-parallel-lint/php-parallel-lint": "1.3.2"
 	},
 	"autoload": {
 		"psr-4": {
@@ -25,14 +26,15 @@
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
-			"minus-x check .",
-			"@phpcs"
+			"@phpcs",
+			"minus-x check ."
 		],
 		"fix": [
 			"minus-x fix .",
 			"phpcbf"
 		],
-		"phpcs": "phpcs -sp"
+		"phan": "phan -d . --long-progress-bar",
+		"phpcs": "phpcs -sp --cache"
 	},
 	"config": {
 		"allow-plugins": {
