--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 		"installer-name": "TuleapIntegration"
 	},
 	"require": {
-		"composer/installers": "~1.0",
+		"composer/installers": "^1.0||^2.0",
 		"league/oauth2-client": "2.6.*",
 		"firebase/php-jwt": "v6.0.*",
 		"ext-sodium": "*",
